Rework auth workflow (wip)

--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -39,6 +39,8 @@ pages:
       disabled: Votre compte a été désactivé
       password_changed: Votre mot de passe a été modifié, veuillez vous reconnecter
       session_terminated: Votre session a été terminée
+  complete_otp:
+    title: Authentification à deux facteurs
   register:
     title: Créer un compte
     back: Retour à la connexion
@@ -310,6 +312,7 @@ forms:
       password: Mot de passe
       remember_me: Se souvenir de moi
       username: Nom d’utilisateur
+    submit: Se connecter
   register:
     errors:
       missing_username: Nom d’utilisateur requis
@@ -328,7 +331,7 @@ forms:
       email: Adresse e-mail
       password: Mot de passe
       confirm_password: Confirmer le mot de passe
-    submit: Valider
+    submit: Créer
   change_password:
     submit: Continuer
     errors:
@@ -347,6 +350,7 @@ forms:
       invalid_email: Format d’adresse e-mail invalide
     fields:
       email: Adresse e-mail
+    submit: Envoyer le lien de réinitialisation
   update_password:
     submit: Mettre à jour
     errors:
