--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -152,6 +152,19 @@ pages:
     menu:
       general: Général
       users: Utilisateurs
+    general:
+      headers:
+        registrations: Inscriptions des utilisateurs
+      toggle_registration:
+        title: Autoriser les inscriptions
+        description: Si cette option est activée, les visiteurs pourront créer un compte sur votre instance Hedera. Dans le cas contraire, seuls les administrateurs pourront créer des comptes.
+      default_disk_quota:
+        title: Quota d’espace disque par défaut
+        description: Définir le quota d’espace disque alloué par défaut pour les utilisateurs qui s’inscrivent. Il est possible d'autoriser un quota illimité, mais cela est fortement déconseillé, en particulier si les inscriptions sont autorisées et/ou que l'instance est publique.
+        unlimited: Illimité (déconseillé)
+        limited: Limité
+        choose: Choisir une politique
+        placeholder: Saisir une taille
     users:
       title: Utilisateurs
       role:
