--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -39,6 +39,7 @@ pages:
       disabled: Your account has been disabled
       password_changed: Your password has been changed, please log in again
       session_terminated: Your session has been terminated
+      registration_disabled: Registrations are not enabled
   register:
     title: Create an account
     back: Back to login
