--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -215,7 +215,8 @@ pages:
         submit: Deactivate the user
       delete_dialog:
         title: Delete a user
-        summary: This action is irreversible and all the user’s files will be permanently deleted. Are you sure you want to delete this user?
+        summary: The user {username} will be deleted along with all their files. This user will no longer be able to log in or upload files. This action is irreversible.
+        input: To confirm, please enter {username} in the field below.
         cancel: Cancel
         submit: Delete
   debug:
@@ -444,6 +445,10 @@ forms:
       disk_quota_placeholder: Enter a size
       disk_quota_placeholder_unlimited: Unlimited
       unlimited_disk_quota: Allow for unlimited disk space quota
+  delete_user:
+    errors:
+      missing_username: Username is required
+      username_mismatch: The username does not match
   rename_file:
     submit: Rename
     cancel: Cancel
