--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -417,6 +417,8 @@ forms:
       missing_role: Rôle requis
       missing_force_change_password: Choix sur la modification du mot de passe obligatoire requis
       missing_disk_quota: Quota d’espace disque requis
+      invalid_disk_quota: Quota d’espace disque invalide
+      missing_unlimited_disk_quota: Choix sur le quota d’espace disque illimité requis
     fields:
       username: Nom d’utilisateur
       email: Adresse e-mail
@@ -436,6 +438,8 @@ forms:
       invalid_email: Format d’adresse e-mail invalide
       missing_role: Rôle requis
       missing_disk_quota: Quota d’espace disque requis
+      invalid_disk_quota: Quota d’espace disque invalide
+      missing_unlimited_disk_quota: Choix sur le quota d’espace disque illimité requis
     fields:
       username: Nom d’utilisateur
       email: Adresse e-mail
