--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -163,6 +163,7 @@ pages:
     select_files: Choisir des fichiers
     upload_files: Envoyer les fichiers
     clear_files: Vider la sélection
+    clear_done: Nettoyer les fichiers terminés
     pending: En attente
     uploading: En cours d’envoi
     completed: En ligne
