--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -159,17 +159,21 @@ pages:
       uploading: Uploading
       completed: Completed
       error: Failed
+    success:
+      title: Upload completed
+      detail: "{count} file has been uploaded | {count} files have been uploaded"
+    error:
+      title: Upload failed
+      detail: "{count} file could not be uploaded | {count} files could not be uploaded"
+    partial:
+      title: Upload completed with errors
+      detail: "{count} file out of {total} has been uploaded | {count} files out of {total} have been uploaded"
     drag_n_drop: Drag and drop files here to upload.
     total_size: "Total size to be uploaded: {size}"
     select_files: Select files
     upload_files: Upload files
     clear_files: Clear pending files
     clear_done: Clear completed files
-    pending: Pending
-    uploading: Uploading
-    completed: Uploaded
-    error: Error
-    finished: Upload finished
   analytics:
     title: Analytics
   configuration:
