--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -190,9 +190,11 @@ pages:
     menu:
       general: General
       users: Users
+      maintenance: Maintenance
     general:
       headers:
         registrations: Registrations of new users
+        files: Files
       toggle_registration:
         title: Allow registrations
         description: If this option is enabled, visitors will be able to create an account on your Hedera instance. Otherwise, only administrators will be able to create accounts.
@@ -203,6 +205,10 @@ pages:
         limited: Limited
         choose: Choose a policy
         placeholder: Enter a size
+      maximum_thumbnail_count:
+        title: Amount of thumbnails to keep
+        description: Set the maximum amount of thumbnails to keep in cache for each user. The oldest thumbnails will be deleted when new thumbnails need to be generated.
+        advice: A value that is too low can lead to excessive CPU usage, while a value that is too high can lead to increased disk space usage. The recommended range is between 100 and 200.
     users:
       title: Users
       role:
@@ -254,6 +260,18 @@ pages:
         input: To confirm, please enter {username} in the field below.
         cancel: Cancel
         submit: Delete
+    maintenance:
+      title: Maintenance
+      clear_thumbnail_cache:
+        title: Clear thumbnail cache
+        description: Delete all file thumbnails stored in cache. Thumbnails will be recreated as soon as the files are listed again.
+        clear_cache: Clear cache
+        cache_size: 'Current cache size: {size}'
+      clear_thumbnail_cache_dialog:
+        title: Clear thumbnail cache
+        summary: The CPU may be more solicited than usual during the next file searches. This action is irreversible. Are you sure you want to clear the thumbnail cache?
+        cancel: Cancel
+        submit: Clear cache
   debug:
     title: Debug
   profile:
