--- a/client/locales/fr.yml
+++ b/client/locales/fr.yml
@@ -53,6 +53,7 @@ pages:
     title: Réinitialiser le mot de passe
     login: Retour à la connexion
     input_token: Je possède une clé
+    back: Je n’ai pas reçu de clé
   files:
     title: Fichiers
     link_copied: Le lien a été copié dans le presse-papier
@@ -207,7 +208,7 @@ pages:
         description: Si cette option est activée, les visiteurs pourront créer un compte sur votre instance Hedera. Dans le cas contraire, seuls les administrateurs pourront créer des comptes.
       default_disk_quota:
         title: Quota d’espace disque par défaut
-        description: Définir le quota d’espace disque alloué par défaut pour les utilisateurs qui s’inscrivent. Il est possible d'autoriser un quota illimité, mais cela est fortement déconseillé, en particulier si les inscriptions sont autorisées et/ou que l'instance est publique.
+        description: Définir le quota d’espace disque alloué par défaut pour les utilisateurs qui s’inscrivent. Il est possible d’autoriser un quota illimité, mais cela est fortement déconseillé, en particulier si les inscriptions sont autorisées et/ou que l’instance est publique.
         unlimited: Illimité (déconseillé)
         limited: Limité
         choose: Choisir une politique
@@ -259,7 +260,7 @@ pages:
         submit: Désactiver l’utilisateur
       delete_dialog:
         title: Supprimer un utilisateur
-        summary: L'utilisateur {username} va être supprimé ainsi que tous ses fichiers. Cet utilisateur ne pourra plus se connecter ni envoyer de nouveaux fichiers. Cette action est irréversible.
+        summary: L’utilisateur {username} va être supprimé ainsi que tous ses fichiers. Cet utilisateur ne pourra plus se connecter ni envoyer de nouveaux fichiers. Cette action est irréversible.
         input: Pour confirmer, veuillez saisir {username} dans le champ ci-dessous.
         cancel: Annuler
         submit: Supprimer
