--- a/client/locales/en.yml
+++ b/client/locales/en.yml
@@ -36,7 +36,7 @@ pages:
     reasons:
       expired: Your session has expired, please log in again
       logout_all: You have been logged out of all devices
-      disabled: Your account has been disabled
+      account_disabled: Your account has been disabled
       password_changed: Your password has been changed, please log in again
       session_terminated: Your session has been terminated
       registration_disabled: Registrations are not enabled
